# fault-tolerant-distsys-course

hw-1/: CMakeLists.txt
hw-1/src/: helpers.cpp  master.cpp  slave.cpp
hw-2/: log.py  main.py  models.py  server.py  storage.py  test.py  timer.py
hw-3/: logging.conf  main.py  models.py  server.py  timer.py
src/: helpers.cpp  helpers.h  main.cpp  main_slave.cpp  master.cpp  master.h  slave.cpp  slave.h
